# mkdirp

./: README.md  pyproject.toml  setup.py
mkdirp/: __init__.py  cli.py  mkdirp.py
